# Model-Predictive-Control

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md
img/: .gitignore
scripts/: .gitignore  drawTrack.R  drawTracks.R
sim/: .gitignore
src/: FG_eval.hpp  FileWriter.cpp  FileWriter.h  MPC.cpp  MPC.h  Path.cpp  Path.h  Points.cpp  Points.h  Polynomial.cpp  Polynomial.h  main.cpp
test/: CMakeLists.txt  TestPath.cpp  TestPoints.cpp  TestPolynomial.cpp
